<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:id="@+id/menu_title"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:text="@string/app_name"
            android:textSize="40sp"
            android:textColor="@color/white"
            android:gravity="center"
            android:background="@color/md_purple_800"/>
        <Button
            android:id="@+id/menu_search"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:text="@string/menu_hsk_words"
            android:textSize="40sp"
            android:textColor="@color/white"
            android:gravity="center"
            android:background="@color/md_indigo_800"/>
        <Button
            android:id="@+id/menu_bookmark"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:text="@string/menu_search"
            android:textSize="40sp"
            android:textColor="@color/white"
            android:gravity="center"
            android:background="@color/md_blue_800"/>
        <Button
            android:id="@+id/menu_github"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:text="@string/menu_github"
            android:textSize="40sp"
            android:textColor="@color/white"
            android:gravity="center"
            android:background="@color/md_light_blue_800"/>
        <Button
            android:id="@+id/menu_exit"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:text="@string/menu_exit"
            android:textSize="40sp"
            android:textColor="@color/white"
            android:gravity="center"
            android:background="@color/md_cyan_800"/>
    </LinearLayout>
    <ProgressBar style="?android:attr/progressBarStyleLarge"
        android:id="@+id/progress"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:visibility="gone"/>
</FrameLayout>